--- a/Mall_Customers_Clustering.ipynb
+++ b/Mall_Customers_Clustering.ipynb
@@ -1901,9 +1901,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "575fe0a0-1228-45cf-8de9-872add3f5b57",
+   "metadata": {},
+   "source": [
+    "# NEW SECTION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33497f4a-c679-4a76-be90-55b372553740",
+   "id": "7b0bf515-c7a7-4873-96c1-ba16256f0c38",
    "metadata": {},
    "outputs": [],
    "source": []
